updated plotting example

--- a/PythonBootcamp/06_Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/06_Introduction_to_Pandas.ipynb
@@ -1745,7 +1745,7 @@
     "\n",
     "<h4>Plotting with Pandas!</h4>\n",
     "    \n",
-    "Pandas has a set of charting tools built into the library. You can quickly create visualizations(especially with grouped and aggregated data which we will get to later) using pandas built in plotting functions such as:\n",
+    "Pandas has a set of plotting tools built into the library. You can quickly create visualizations(especially with grouped and aggregated data which we will get to later) using pandas built in plotting functions such as:\n",
     "    \n",
     "\n",
     "* **<code>[.plot](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.plot.html)</code>**\n",
@@ -1759,8 +1759,10 @@
     "\n",
     "    \n",
     "* **<code>[.boxplot](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.boxplot.html)</code>**\n",
-    "     \n",
-    "  "
+    "    \n",
+    "    \n",
+    "**NOTE!** Pandas works especially well with the the seaborn plotting package. We won't cover this now because there's a whole data visualization tutorial later! \n",
+    "     "
    ]
   },
   {
@@ -1792,7 +1794,7 @@
     }
    ],
    "source": [
-    "# Lets plot the profit by category\n",
+    "# Lets create a boxplot of  profit by category\n",
     "\n",
     "df.boxplot(column=['Profit'], by=['Category'])"
    ]
@@ -7813,9 +7815,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Ship Mode</th>\n",
+       "      <th>First Class</th>\n",
+       "      <th>Same Day</th>\n",
+       "      <th>Second Class</th>\n",
+       "      <th>Standard Class</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Order Priority</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Critical</th>\n",
+       "      <td>1368</td>\n",
+       "      <td>516</td>\n",
+       "      <td>732</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>High</th>\n",
+       "      <td>3336</td>\n",
+       "      <td>1164</td>\n",
+       "      <td>3288</td>\n",
+       "      <td>5244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Low</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium</th>\n",
+       "      <td>2172</td>\n",
+       "      <td>552</td>\n",
+       "      <td>3864</td>\n",
+       "      <td>15636</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Ship Mode       First Class  Same Day  Second Class  Standard Class\n",
+       "Order Priority                                                     \n",
+       "Critical               1368       516           732               0\n",
+       "High                   3336      1164          3288            5244\n",
+       "Low                       0         0             0            1956\n",
+       "Medium                 2172       552          3864           15636"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# In this example we want to be able to count number of orders\n",
     "# by order priority and shipping mode\n",
@@ -7856,9 +7939,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"4\" halign=\"left\">Order ID</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ship Mode</th>\n",
+       "      <th>First Class</th>\n",
+       "      <th>Same Day</th>\n",
+       "      <th>Second Class</th>\n",
+       "      <th>Standard Class</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Order Priority</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Critical</th>\n",
+       "      <td>1368.0</td>\n",
+       "      <td>516.0</td>\n",
+       "      <td>732.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>High</th>\n",
+       "      <td>3336.0</td>\n",
+       "      <td>1164.0</td>\n",
+       "      <td>3288.0</td>\n",
+       "      <td>5244.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Low</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1956.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium</th>\n",
+       "      <td>2172.0</td>\n",
+       "      <td>552.0</td>\n",
+       "      <td>3864.0</td>\n",
+       "      <td>15636.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     count                                     \n",
+       "                  Order ID                                     \n",
+       "Ship Mode      First Class Same Day Second Class Standard Class\n",
+       "Order Priority                                                 \n",
+       "Critical            1368.0    516.0        732.0            NaN\n",
+       "High                3336.0   1164.0       3288.0         5244.0\n",
+       "Low                    NaN      NaN          NaN         1956.0\n",
+       "Medium              2172.0    552.0       3864.0        15636.0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# To see how this works lets make something similar to our crosstab with counts! \n",
     "\n",
@@ -7877,9 +8055,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">sum</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Sales</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">Sales</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Segment</th>\n",
+       "      <th>Consumer</th>\n",
+       "      <th>Corporate</th>\n",
+       "      <th>Home Office</th>\n",
+       "      <th>Consumer</th>\n",
+       "      <th>Corporate</th>\n",
+       "      <th>Home Office</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Order Priority</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Critical</th>\n",
+       "      <td>15523.3562</td>\n",
+       "      <td>13242.7100</td>\n",
+       "      <td>12487.2920</td>\n",
+       "      <td>147.841488</td>\n",
+       "      <td>217.093607</td>\n",
+       "      <td>240.140231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>High</th>\n",
+       "      <td>103756.7947</td>\n",
+       "      <td>81056.0856</td>\n",
+       "      <td>68417.2380</td>\n",
+       "      <td>185.944077</td>\n",
+       "      <td>263.169109</td>\n",
+       "      <td>310.987445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Low</th>\n",
+       "      <td>12470.4220</td>\n",
+       "      <td>12673.7510</td>\n",
+       "      <td>7726.4540</td>\n",
+       "      <td>148.457405</td>\n",
+       "      <td>264.036479</td>\n",
+       "      <td>249.240452</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Medium</th>\n",
+       "      <td>200722.4870</td>\n",
+       "      <td>135038.6858</td>\n",
+       "      <td>70831.7469</td>\n",
+       "      <td>216.762945</td>\n",
+       "      <td>239.006524</td>\n",
+       "      <td>196.209825</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        sum                                 mean              \\\n",
+       "                      Sales                                Sales               \n",
+       "Segment            Consumer    Corporate Home Office    Consumer   Corporate   \n",
+       "Order Priority                                                                 \n",
+       "Critical         15523.3562   13242.7100  12487.2920  147.841488  217.093607   \n",
+       "High            103756.7947   81056.0856  68417.2380  185.944077  263.169109   \n",
+       "Low              12470.4220   12673.7510   7726.4540  148.457405  264.036479   \n",
+       "Medium          200722.4870  135038.6858  70831.7469  216.762945  239.006524   \n",
+       "\n",
+       "                            \n",
+       "                            \n",
+       "Segment        Home Office  \n",
+       "Order Priority              \n",
+       "Critical        240.140231  \n",
+       "High            310.987445  \n",
+       "Low             249.240452  \n",
+       "Medium          196.209825  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Lets do the same thing but with columns that contain values rather than categories. \n",
     "# Lets use Sales as our values, and Order Priority and Segment as our index and columns\n",
@@ -7928,105 +8224,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This example is gonna be slightly more complicated! \n",
+    "# This last is gonna be slightly more complicated! \n",
     "\n",
     "# Now lets subset the dataframe to just \"Region\" and \"COGS\"\n",
-    "COGS_df = USA_sales_long[['Region', 'COGS']]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Lets now groupby Region and get the sum for each region\n",
-    "agg_df = COGS_df.groupby(by = 'Region').agg(['sum'])\n",
+    "COGS_df = usa_sales_long[['Region', 'COGS']]\n",
     "\n",
-    "# view the output df\n",
-    "agg_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
-    "    \n",
-    "In the example above we broke our code out into single pieces, however it is also possible to chain our commands like so:\n",
-    "    \n",
-    "    agg_df = USA_long[['Region', 'COGS']].groupby(by = 'Region').agg(['sum'])\n",
-    "    \n",
-    "The important thing is to make sure your code is still readable, not only by yourself but also by anyone else who might interact with it. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='plot_agg'></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot the agg_df as a barplot, since the df only has one column('COGS') no need to specify x & y\n",
+    "# Groupby Region and get the sum for each region\n",
+    "region_agg = COGS_df.groupby(by = 'Region').agg(['sum'])\n",
     "\n",
-    "agg_df.plot(kind='bar',\n",
-    "            xlabel = \"Region\",\n",
-    "            ylabel = \"COGS\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
-    "\n",
-    "PROTIP:\n",
-    "    \n",
-    "You can either do the grouping and aggregation to produce a dataframe and then plot the results from that dataframe (separating the grouping & agg from the plotting)  as we did above. \n",
-    "    \n",
-    " ~ Or ~  you can call the plot directly at the end of the grouping and aggregation. Whatever is more readable to intuitive is the method you should use. \n",
-    " \n",
-    "    \n",
-    "Example: \n",
-    "    \n",
-    "<code>df_long[['Region', 'COGS']].groupby(by = 'Region').agg(['sum']).plot((kind='bar', xlabel = \"Region\", ylabel = \"COGS\")</code> \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We want to create a bar plot that's total sales by state\n",
-    "# In this example we will use a horizontal bar plot and sort the values beforehand to improve the the plot\n",
-    "\n",
-    "# Lets use the sales_long dataframe that we created earlier and subset it by state and Sales\n",
-    "# then groupby 'state' & use 'sum' as the aggregator\n",
-    "df_agg2 = sales_long[['State','Sales']].groupby('State').agg(['sum'])\n",
-    "\n",
-    "# then sort the values by both 'Sales' and 'sum', use inplace=True to propogate that values to the dataframe\n",
-    "df_agg2.sort_values(by=[('Sales', 'sum')], ascending = False, inplace=True)\n",
-    "\n",
-    "# finally plot the dataframe using the built-in pandas functionality\n",
-    "# figsize can be used to increase the size of the visualization\n",
-    "df_agg2.plot(kind='barh', figsize=(10,10))"
+    "# Lets view the output dataframe\n",
+    "region_agg"
    ]
   },
   {
